[package]
name = "seal-tools"
version = "0.2.1-dev"
edition = "2021"
authors = ["檀轶步棋"]
description = "为海豹核心（SealDice）提供的各种工具"

[profile.release]
opt-level = 'z' # Optimize for size
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
clearscreen = "2.0.1"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
curl = "0.4.44"
zip = "0.6.6"
flate2 = "1.0.26"
tar = "0.4.38"